Bug fixed. Added padding to body the footer fixed covered the content.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,7 +22,7 @@ html {
 }
 
 body {
-  margin: 4rem 2rem;
+  padding: 4rem 2rem 18rem 2rem;
   font-family: "Ubuntu", sans-serif;
 }
 
@@ -218,7 +218,7 @@ footer {
 
 /****** LIST ******/
 .list {
-  margin: 5rem auto 25rem;
+  margin: 5rem auto 0;
 }
 .list-info {
   padding: 3rem 1rem;
